--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@fullcalendar/core": "4.4.0",
     "@fullcalendar/interaction": "4.4.0",
     "@fullcalendar/list": "4.4.0",
-    "@fullcalendar/daygrid": "4.4.0"
+    "@fullcalendar/daygrid": "4.4.0",
+    "@fullcalendar/timegrid": "4.4.0"
   },
   "devDependencies": {
     "webpack": "^4.32.2",
